fixed broken layout

--- a/page/common.css
+++ b/page/common.css
@@ -159,7 +159,7 @@ button,
 	}
 	.header-nav {
 		padding-left: 0;
-		margin-top: 4%;
+		margin-top: 14px;
 	}
 	.header-nav-list {
 		justify-content: center;
